# ma-agent

./: Dockerfile  Procfile  database.py  guide.txt  gunicorn_config.py  hello.py  init_knowledge.py  knowledge_base.py  pyproject.toml  requirements.txt  run_agent.py
phi/tools/: twilio.py
src/agent/: __init__.py  agent_factory.py  guide.txt  hello.py  semantic_model_agent.py  sql_agent.py  tools.py
src/api/: main.py  routes.py
src/config/: settings.py
src/db/: config.py  message_logger.py  organization_service.py  supabase_client.py
