[project]
name = "ma-agent"
version = "0.1.0"
description = "Martial Arts CRM Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "phidata>=2.7.6",
    "psycopg2-binary>=2.9.10",
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.42.0",
    "twilio>=9.4.1",
    "sqlalchemy>=2.0.36",
    "gunicorn>=21.2.0",
    "supabase>=2.11.0",
]
